tests/ui/diagnostic_namespace/on_move/report_warning_on_duplicated_options.stderr
warning: `message` is ignored due to previous definition of `message`
  --> $DIR/report_warning_on_duplicated_options.rs:8:5
   |
LL |     message = "first message",
   |     ------------------------- `message` is first declared here
...
LL |     message = "second message",
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `message` is later redundantly declared here
   |
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: `label` is ignored due to previous definition of `label`
  --> $DIR/report_warning_on_duplicated_options.rs:10:5
   |
LL |     label = "first label",
   |     --------------------- `label` is first declared here
...
LL |     label = "second label",
   |     ^^^^^^^^^^^^^^^^^^^^^^ `label` is later redundantly declared here

error[E0382]: first message
  --> $DIR/report_warning_on_duplicated_options.rs:20:15
   |
LL |     let foo = Foo;
   |         --- first label
LL |     takes_foo(foo);
   |               --- value moved here
LL |     let bar = foo;
   |               ^^^ value used here after move
   |
note: consider changing this parameter type in function `takes_foo` to borrow instead if owning the value isn't necessary
  --> $DIR/report_warning_on_duplicated_options.rs:15:17
   |
LL | fn takes_foo(_: Foo) {}
   |    ---------    ^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Foo` implemented `Clone`, you could clone the value
  --> $DIR/report_warning_on_duplicated_options.rs:13:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     takes_foo(foo);
   |               --- you could clone this value

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0382`.
